# gst-plugins-base-1

./: meson_options.txt
gst/: meson.build
gst/videodiscret11/: #meson.build#  .#meson.build  README  gstvideodiscret11.c  gstvideodiscret11.h  meson.build
